<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="0.01"
        android:background="@null"
        android:onClick="main_settings"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/prefs" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="bottom"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/tv_clever"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/clevertext"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bt_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/play"
        android:onClick="main_server"
        android:text="@string/play"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/videos"
        android:onClick="main_videos"
        android:text="@string/videos"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/credits"
        android:onClick="main_help"
        android:text="@string/help"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/help"
        android:onClick="main_about"
        android:text="@string/about"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/exit"
        android:onClick="main_exit"
        android:text="@string/exit"
        android:textColor="@android:color/white" />
</LinearLayout>