<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription=""
            android:padding="25dp"
            app:srcCompat="@drawable/face"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_atitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="11dp"
                android:text="@string/about"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_aid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_328472264" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_gadolinium" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday_september_11_2001" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robidium_hs_2018" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exit"
        android:onClick="about_dismiss"
        android:text="@string/dismiss"
        android:textColor="@android:color/white" />

</LinearLayout>