<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingEnd="25dp"
        android:paddingLeft="25dp"
        android:text="@string/leaveTitle"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="25dp"
        android:paddingLeft="25dp"
        android:text="@string/leaveText"
        android:textAlignment="center"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/bt_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/play"
            android:text="@string/no"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/exit"
            android:text="@string/yes"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>