<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/help"
        android:onClick="help_back"
        android:text="@string/right"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bt_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/help"
        android:onClick="help_forward"
        android:text="@string/left"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/img_instruction"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:background="@null"
        android:contentDescription="@string/visual"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/tv_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_back"
        android:layout_alignEnd="@+id/bt_forward"
        android:layout_alignStart="@+id/bt_back"
        android:layout_below="@+id/img_instruction"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_back"
        android:layout_alignEnd="@+id/bt_forward"
        android:layout_alignStart="@+id/bt_back"
        android:layout_below="@+id/img_instruction"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFFFF"
        android:padding="10dp"
        android:text="@string/inst0"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bt_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt_forward"
        android:layout_centerHorizontal="true"
        android:background="@drawable/exit"
        android:onClick="help_return"
        android:text="@string/back"
        android:textColor="#FFFFFFFF" />

</RelativeLayout>